--- a/index.css
+++ b/index.css
@@ -57,30 +57,34 @@ a, li{
     font-size: 3rem;
     color: var(--verde-sub);
     font-style: italic;
-    padding-left: 5%;
+    padding-left: 15%;
 }
 .left h1{
     font-size: 5rem;
     color: var(--azul-title);
     font-style: italic;
-    padding-left: 5%;
+    padding-left: 15%;
 }
 .left h4{
     font-size: 2rem;
     padding-bottom: 3%;
-    padding-left: 5%;
+    padding-left: 15%;
     color: var(--verde-sub);
     font-family: 'alumni sans', sans-serif;
     border-bottom: 1px solid var(--verde-sub);
-    width: 70%;
+    width: 90%;
     font-weight: 100;
     
 }
 .left li {
     color: var(--verde-sub);
-    padding: 30px 0px;
-    padding-left: 5%;
+    font-size: 1.5rem;
+    padding: 20px 0px;
+    padding-left: 15%;
+    padding-top: 30px;
+    font-weight: 600;
 }
+
 .hero .right {
     width: 30rem;
     height: 30rem;
@@ -107,15 +111,17 @@ a, li{
     font-size: 2em;
 
 }
-.wrapper .hero3{
+.hero3{
     background: #1D0036;
-    width: 100%;
-    height: 100vh;
+    width: 96%;
+    height: 200vh;
     border-radius: 40px 40px 40px 40px;
+    margin: 30px;
 }
 .hero3 .center{
     text-align: center;
     padding-top: 100px;
+    
 }
 .hero3 h1{
     color: var(--blue-header);
